tests/error/poly_errors_py312/non_droppable2.py
from hugr import tys

from guppylang_internals.decorator import guppy, custom_type


@custom_type(tys.Tuple(), droppable=False)
class NonDroppable:
    pass


@guppy.struct
class MyStruct[D: NonDroppable]:
    pass


MyStruct.compile()
